--- a/bharat-clock/src/App.css
+++ b/bharat-clock/src/App.css
@@ -3,10 +3,15 @@
   color: antiquewhite;
 }
 .slogn{
-  color:rgb(97, 197, 140);
+  color:rgb(10, 246, 238);
   font-weight: 800;
-  font-size: 20px;
+
 }
-h1{
-  background-color: aquamarine;
+.header h1{
+  background-color: rgb(8, 104, 13);
+}
+.container{
+  /* width: 400px;
+  height: 400px; */
+  background-color: cadetblue;
 }
